[package]
name = "fast-socks5"
version = "0.9.1"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fast SOCKS5 client/server implementation written in Rust async/.await (tokio)"
repository = "https://github.com/dizda/fast-socks5"
categories = [
    "asynchronous",
    "network-programming",
    "command-line-utilities",
    "authentication",
]
keywords = ["io", "proxy", "vpn", "async", "socks"]

[features]
default = []
socks4 = []

[dependencies]
log = "0.4"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
async-std = { version = "1.12.0", features = ["attributes"] }
smol = "1.3.0"
futures = "0.3.29"

# Dependencies for examples and tests
[dev-dependencies]
env_logger = "0.10"
structopt = "0.3"

[[example]]
name = "server"

[[example]]
name = "client"

[[example]]
name = "simple_tcp_server"
